--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-spinners": "^0.14.1",
+    "sass": "^1.79.3",
     "validator": "^13.12.0"
   },
   "devDependencies": {
